--- a/index.html
+++ b/index.html
@@ -396,6 +396,6 @@
     </div>
 
     <script type="module" src="/src/main.ts"></script>
-    <script type="module" src="/src/test-ui.ts"></script>
+    <script type="module" src="/src/test-ui/main.ts"></script>
   </body>
 </html>
